--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 2</title>
-	<link rel="stylesheet" href="css/styles.css"/>
+	<link rel="stylesheet" href="stylesheets/styles.css"/>
 </head>
 <body>
 <div id="container">
